# ChangeLog for app-cdr/cdbkup
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbkup/ChangeLog,v 1.5 2004/03/30 00:08:30 mr_bones_ Exp $

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> cdbkup-1.0.ebuild:
  inherit eutils for epatch; use epatch; IUSE; depend on sed >= 4

  21 Nov 2003; Daniel Ahlberg <aliz@gentoo.org> cdbkup-1.0.ebuild :
  Block app-misc/cdcat becuse it also install /usr/bin/cdcat. Closing #27502.

*cdbkup-1.0 (18 Aug 2002)

  28 Mar 2003; Pieter Van den Abeele <pvdabeel@gentoo.org> cdbkup-1.0.ebuild:
  Added ~ppc

  18 Aug 2002; Daniel Ahlberg <aliz@gentoo.org> cdbkup-1.0.ebuild:
  Initial import. Ebuild submitted by Cal Evans <cal@calevans.com>.