@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbkup/cdbkup-1.0.ebuild,v 1.12 2004/03/30 00:08:30 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbkup/cdbkup-1.0.ebuild,v 1.13 2004/04/25 21:48:07 agriffis Exp $
 
 inherit eutils
 
@@ -32,7 +32,7 @@ src_unpack() {
 }
 
 src_compile() {
-	econf --with-snardir=/etc/cdbkup --with-dumpgrp=users
+	econf --with-snardir=/etc/cdbkup --with-dumpgrp=users || die "econf failed"
 }
 
 src_install() {
