@@ -3,6 +3,9 @@
 # /home/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.46 2004/03/27 16:18:17
 # lanius Exp $
 
+  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> k3b-0.11.9.ebuild:
+  Add die following econf for bug 48950
+
   24 Apr 2004; Heinrich Wendel <lanius@gentoo.org> k3b-0.11.6.ebuild,
   k3b-0.11.9.ebuild:
   mark 0.11.9 stable, fix depend again
