@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/cdbkup
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbkup/ChangeLog,v 1.5 2004/03/30 00:08:30 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdbkup/ChangeLog,v 1.6 2004/04/25 21:48:07 agriffis Exp $
+
+  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> cdbkup-1.0.ebuild:
+  Add die following econf for bug 48950
 
   29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> cdbkup-1.0.ebuild:
   inherit eutils for epatch; use epatch; IUSE; depend on sed >= 4
